# network-device-upgrade-system

./: .ansible-lint  .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint  .yamllint.yml  CLAUDE.md  CLAUDE_CONTEXT.md  CLAUDE_IMPROVEMENT_ANALYSIS.md  CLAUDE_MD_IMPROVEMENTS_SUMMARY.md  CLAUDE_WORKING_GUIDE.md  COMPLIANCE_ANALYSIS_SUMMARY.txt  COMPLIANCE_AUDIT_REPORT.md  COMPLIANCE_COMPLETION_REPORT.md  COMPLIANCE_FIXES_TODO.md  COMPLIANCE_REMEDIATION_COMPLETE.txt  CONVERSATION_SUMMARY.md  Dockerfile  GITHUB_PROJECT_OVERVIEW.md  IMPLEMENTATION_STATUS.md  IMPROVEMENT_TODO.md  LICENSE  MOCK_DEVICE_PATTERN_ANALYSIS.md  MOLECULE_TESTS.md  PROJECT_REQUIREMENTS.md  QUICK_REFERENCE.txt  README.md  TODO_HIGH_PRIORITY.md  aggressive_yaml_fix.py  comprehensive_yaml_fix.py  docker-entrypoint.sh  final_yamllint_fixer.py  fix_yaml_lines.py  fix_yaml_syntax.py  pyproject.toml  quick_yaml_fix.py  ultimate_yaml_fixer.py  workflow-fixes.md
.claude/: instructions.md
.claude/agents/: test-runner-fixer.md
.claude/commands/: analyze-code.md  code-commit.md  code-commit.yaml  fix-github-workflows.md  fix-github-workflows.yaml  fix-workflow.md  lint-and-fix.md  lint-and-fix.yaml  lint-fix.md  pr-test-review.md  review-ansible-tests.md  test-analysis.md  test-gaps.md  test-health-check.md
.github/: DESCRIPTION  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  TOPICS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ansible-tests-backup.yml  ansible-tests-broken.yml  ansible-tests-main.yml  ansible-tests-simple.yml  ansible-tests-working.yml  ansible-tests.yml  build-container.yml  claude-code-review.yml  claude.yml  cleanup-artifacts.yml  cleanup-packages.yml  comprehensive-tests.yml  create-release.yml  create-tarball.yml  (+11 more)
ai-code-reviews/: PROJECT_SUMMARY.review.md  README.md  bgp-validation.yml.review.md  cisco-nxos-upgrade-main.yml.review.md  collections-requirements.yml.review.md  conditional-logic-coverage.yml.review.md  deploy-to-environment.sh.review.md  fortios-upgrade-main.yml.review.md  grafana-dashboards.review.md  install-system.sh.review.md  main-upgrade-workflow.yml.review.md  provision-dashboards.sh.review.md  run-all-critical-gap-tests.sh.review.md  security-boundary-testing-simple.yml.review.md  setup-system.sh.review.md  validate-deployment.sh.review.md
ansible-content/: ansible.cfg
awx-config/: inventories.yml  job-templates.yml  workflow-templates.yml
comprehensive-test-results-137/: test_report_20250919_102706.txt
critical-gap-test-results-3.13.7/: conditional-logic-coverage-2025-09-13.json  critical-gap-test-summary-2025-09-13.json  critical-gap-test-summary-2025-09-19.json  critical-gap-test-summary-20250914-222848.json  critical-gap-test-summary-20250919-102727.json
deployment/: README.md
docs/: COMPREHENSIVE_AUDIT_REPORT.md  DOCUMENTATION_ANALYSIS_REPORT.md  DOCUMENTATION_AUDIT_COMPLETE.md  DOCUMENTATION_REQUIREMENTS.md  FINAL_DOCUMENTATION_STATUS.md  IMPLEMENTATION_STATUS.md  PLATFORM_FILE_TRANSFER_GUIDE.md  PLATFORM_IMPLEMENTATION_GUIDE.md  PLATFORM_IMPLEMENTATION_STATUS.md  PROJECT_REQUIREMENTS.md  QA_ANALYSIS_AND_IMPROVEMENTS.md  QA_IMPLEMENTATION_SUMMARY.md  README.md  STALE_CONTENT_ANALYSIS.md  TESTING_AND_QA_COMPREHENSIVE_GUIDE.md  UPGRADE_WORKFLOW_GUIDE.md  WORKFLOW_ARCHITECTURE.md  WORKFLOW_INTEGRATION_SUMMARY.md  ansible-module-usage-guide.md  baseline-comparison-output-examples.md  code-analysis-report-2025-09-30.md  container-deployment.md  critical-gaps-testing.md  firmware-naming-standards.md  grafana-configuration-guide.md  grafana-deployment.md  installation-guide.md  inventory-parameters.md  molecule-testing-guide.md  nxos-facts-analysis.md  platform-file-transfer-guide.md  project-requirements.md  storage-cleanup-guide.md  testing-framework-guide.md  upgrade-workflow-guide.md  workflow-optimization-analysis.md  workflow-steps-guide.md
install/: backup-scripts.sh  configure-telegraf.sh  create-services.sh  install-awx.sh  install-netbox.sh  install-system.sh  setup-awx.sh  setup-netbox.sh  setup-ssl.sh  setup-system.sh
src/: __init__.py  cli.py
tests/: TESTING_IMPLEMENTATION_GUIDE.md  TEST_FRAMEWORK_GUIDE.md  assertion-improvements.md  debug-network-resources-gathering.yml  run-all-tests.sh  shared-test-vars.yml  test-vars.yml
(+433 files in other folders)
